<resources>
    <string name="app_name">MineSweeper</string>
    <string name="timer_textview_text">00:00:00</string>
    <string name="quit_game_text">Quit Game</string>
    <string name="current_score_text">CURRENT SCORE:\n%1$d\nROUND %2$d</string>
    <string name="game_score_text">SCORE: %1$d\nTIME: %2$d:%3$d:%4$d</string>
    <string name="continue_text">NEXT ROUND</string>
    <string name="game_over_text">PLAY AGAIN?</string>
    <string name="quit_alert">Are you sure you want to quit?</string>
    <string name="quit_alert_end">End game</string>
    <string name="quit_alert_resume">Resume</string>
    <string name="continue_button_text"> </string>
    <string name="start_button_text">START!</string>
    <string name="game_over_screen_text">GAME OVER</string>
    <string name="high_scores_text">HIGH SCORES:</string>
    <string name="game_number_header">Game</string>
    <string name="score_header">Score</string>
    <string name="time_header">Time</string>
    <string name="game_number">%1$d</string>
    <string name="high_score">%1$d</string>
    <string name="timestamp">%1$d:%2$d:%3$d</string>
    <string name="no_high_scores_text">NO HIGH SCORES :(</string>
</resources>
