<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray">

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@id/quitButton"
        android:background="@drawable/textview_style"
        android:text="@string/timer_textview_text"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="35sp"
        android:fontFamily="@font/dsdigii"/>

    <Button
        android:id="@+id/quitButton"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_style"
        android:visibility="invisible"
        android:text="@string/quit_game_text"
        android:textColor="@color/black"
        android:fontFamily="@font/vcrosdmono1001"/>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/quitButton"
        android:visibility="invisible"
        android:background="@drawable/button_style"
        android:text="@string/continue_text"
        android:textColor="@color/black"
        android:fontFamily="@font/vcrosdmono1001"/>

    <Button
        android:id="@+id/startButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/continueButton"
        android:background="@drawable/button_style"
        android:text="@string/start_button_text"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/vcrosdmono1001"/>

    <TextView
        android:id="@+id/currentScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/quitButton"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/textview_style"
        android:text="@string/current_score_text"
        android:textSize="17sp"
        android:textColor="@color/lightGreen"
        android:fontFamily="@font/vcrosdmono1001"
        android:textAlignment="center"/>
</RelativeLayout>