<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/darkGray"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <TextView
            android:id="@+id/gameNumber"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_number"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/lightGreen"
            android:fontFamily="@font/vcrosdmono1001"/>

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1">
        </android.support.v4.widget.Space>

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/high_score"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/lightGreen"
            android:fontFamily="@font/vcrosdmono1001"/>

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1">
        </android.support.v4.widget.Space>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/timestamp"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/lightGreen"
            android:fontFamily="@font/vcrosdmono1001"/>
    </LinearLayout>
</android.support.v7.widget.CardView>